add post method

--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,7 @@
               <input
                 class="deliveries-form-input"
                 id="incoming-shipment-id"
-                type="text"
+                type="number"
                 name="incoming-shipment-id"
                 required
                 disabled
@@ -189,17 +189,10 @@
                 </p>
               </div>
 
-              <label class="deliveries-form-label" for="recipient-name">
-                nazwisko przyjmującego
-              </label>
-              <input
-                class="deliveries-form-input"
-                id="recipient-name"
-                type="text"
-                name="recipient-name"
-                placeholder="used-id"
-                required
-              />
+              <p class="recipient-name">
+                nazwisko przyjmującego:
+                <span class="recipient-name-user-login">vladyslav.rzaiev</span>
+              </p>
 
               <label class="deliveries-form-label" for="invoice-num">
                 numer faktury
