add check terminals

--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
                 Opis dostawy
               </label>
               <input
-                class="deliveries-form-input"
+                class="deliveries-form-input delivery-descr-js"
                 id="delivery-descr"
                 type="text"
                 name="delivery-descr"
@@ -102,7 +102,7 @@
                 incoming shipment id
               </label>
               <input
-                class="deliveries-form-input"
+                class="deliveries-form-input inc-ship-id"
                 id="incoming-shipment-id"
                 type="number"
                 name="incoming-shipment-id"
