render last 12 deliveries

--- a/src/index.html
+++ b/src/index.html
@@ -174,7 +174,10 @@
                   />
                 </div>
 
-                <button class="deliveries-form-more-note-btn" type="button">
+                <button
+                  class="deliveries-form-more-note-btn js-more-shiping-note-btn"
+                  type="button"
+                >
                   więcej listów...
                 </button>
               </div>
@@ -328,7 +331,6 @@
               class="deliveries-form-select update-delivery-select-js"
               name="update-select"
               id="update-select"
-              required
             >
               <option value="" disabled selected></option>
               <option value="updateSupplier">dostawca</option>
