--- a/src/index.html
+++ b/src/index.html
@@ -259,6 +259,9 @@
               <tbody class="deliveries-table-body"></tbody>
             </table>
           </div>
+          <button class="load-more-btn load-more-btn-js" type="button">
+            Zobacz więcej
+          </button>
         </div>
       </section>
 
